Use the static ObjectType instance instead of initializing it on call.
This change prevents us from unnecessary ObjectType object allocations.